# brainfuck-jit

./: CMakeLists.txt  Makefile  README.md  vm.c  vm.h
samples/: factor.bf  long.bf  mandelbrot.bf  test2.bf  test3.bf
src/: bf.c  bf.cpp  compiler.c  compiler.cpp  compiler.h  list.h  opcode.h  optimizer.c  optimizer.cpp  optimizer.h  utils.cpp  utils.h  vm.c  vm.cpp  vm.h
src/c/: bf.c  bf.h  compiler.c  compiler.h  optimizer.c  vm.c  vm.h
